--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
+    "jest-environment-node": "20.0.3",
     "live-server": "^1.2.0",
     "moment": "2.18.1",
     "node-sass": "^4.7.2",
